--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,19 +2,18 @@
 <html>
 
   {% include head.html %}
-
+    
   <body>
 
-    {% include header.html %}
+    <div class="container">
 
-    <div class="page-content">
-      <div class="wrapper">
-        {{ content }}
-      </div>
+      {% include header.html %}
+      {% include navigation.html %}
+
+      {{ content }}
+
+      {% include footer.html %}
     </div>
-
-    {% include footer.html %}
-
   </body>
 
 </html>
