--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -2,14 +2,16 @@
 layout: default
 ---
 <div class="post">
-
+	<div class="panel panel-default">
+		<div class="panel-body">
   <header class="post-header">
-    <h1 class="post-title">{{ page.title }}</h1>
+    <h2 class="post-title">{{ page.title }}</h2>
     <p class="post-meta">{{ page.date | date: "%b %-d, %Y" }}{% if page.author %} • {{ page.author }}{% endif %}{% if page.meta %} • {{ page.meta }}{% endif %}</p>
   </header>
 
   <article class="post-content">
     {{ content }}
   </article>
-
+		</div>
+	</div>
 </div>
