--- a/_includes/header.html
+++ b/_includes/header.html
@@ -2,13 +2,7 @@
   <div class="panel panel-default jumbotron-header jumbotron">
     <div class="panel-body">
       <h1><a href="/" style="text-decoration: none" color: black; >{{ site.title }}</a></h1>
-			<h3>My Website</h3>
+			<h3>Future Arts Administrator & Oboist</h3>
     </div>
   </div>
-</div>
-
-<div class="alert alert-dismissable alert-warning">
-    <button type="button" class="close" data-dismiss="alert">×</button>
-    <h4>Pardon the dust</h4>
-    <p>Please pardon the dust, my website is still under construction.</p>
 </div>
