--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,7 +1,7 @@
 <div class="page-header">
   <div class="panel panel-default jumbotron-header jumbotron">
     <div class="panel-body">
-     <img src="https://drive.google.com/uc?export=download&id=0B1dUInJge_OMdmQta0NaSnhmYlk" alt="logo"/>
+     <align= "left"><img src="https://drive.google.com/uc?export=download&id=0B1dUInJge_OMdmQta0NaSnhmYlk" alt="logo" height="100" width="100" /></align>
       <h1><a href="/" style="text-decoration: none" color: black; >{{ site.title }}</a></h1>
 			<h3>Future Arts Administrator & Oboist</h3>
     </div>
