--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -14,6 +14,15 @@
       <li {% if page.title == 'About' %} class="active" {% endif %} >
         <a href="/about.html">About</a>
       </li>
+      <li {% if page.title == 'THEA 452' %} class="active" {% endif %} >
+        <a href="/about.html">THEA 452</a>
+      </li>  
+      <li {% if page.title == 'Blog' %} class="active" {% endif %} >
+        <a href="/about.html">Blog</a>
+      </li>
+      <li {% if page.title == 'Discussions' %} class="active" {% endif %} >
+        <a href="/about.html">Discussions</a>        
+      </li>
       </li>
     </ul>
   </div>
