--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -15,13 +15,13 @@
         <a href="/about.html">About</a>
       </li>
       <li {% if page.title == 'THEA 452' %} class="active" {% endif %} >
-        <a href="/about.html">THEA 452</a>
+        <a href="/thea452.html">THEA 452</a>
       </li>  
       <li {% if page.title == 'Blog' %} class="active" {% endif %} >
-        <a href="/about.html">Blog</a>
+        <a href="/blogs.html">Blog</a>
       </li>
       <li {% if page.title == 'Discussions' %} class="active" {% endif %} >
-        <a href="/about.html">Discussions</a>        
+        <a href="/discussions.html">Discussions</a>        
       </li>
       </li>
     </ul>
