--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -3,6 +3,6 @@
     <!-- <h2 class="lead">&mdash; {{ site.title }} &mdash;</h2> -->
     <!-- <p class="lead small">{{ site.description }}</p> -->
     <p class="lead small">© Michelle Plunkett 2015<br>
-    Please contact <a href="mailto:{{ site.email }}">{{ site.email }}</a> if you have any issues.</p>
+    Please contact <a href="mailto:michellejplunkett@gmail.com"></a> if you have any issues.</p>
   </div>
 </footer>
