--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -14,6 +14,9 @@
       <li {% if page.title == 'About' %} class="active" {% endif %} >
         <a href="/about.html">About</a>
       </li>
+      <li {% if page.title == 'Resume' %} class="active" {% endif %} >
+        <a href="/resume.html">Resume</a>        
+      </li>
       <li {% if page.title == 'THEA 452' %} class="active" {% endif %} >
         <a href="/thea452.html">THEA 452</a>
       </li>  
