--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -20,8 +20,8 @@
       <li {% if page.title == 'THEA 452' %} class="active" {% endif %} >
         <a href="/thea452.html">THEA 452</a>
       </li>  
-      <li {% if page.title == 'Blog' %} class="active" {% endif %} >
-        <a href="/blogs.html">Blog</a>
+      <li {% if page.title == 'Blogs' %} class="active" {% endif %} >
+        <a href="/blog.html">Blogs</a>
       </li>
       <li {% if page.title == 'Discussions' %} class="active" {% endif %} >
         <a href="/discussions.html">Discussions</a>        
