--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -17,11 +17,17 @@
       <li {% if page.title == 'Resume' %} class="active" {% endif %} >
         <a href="/resume.html">Resume</a>        
       </li>
-      <li {% if page.title == 'THEA 452' %} class="active" {% endif %} >
-        <a href="/thea452.html">THEA 452</a>
+      <li {% if page.title == 'THEA 452 Blogs' %} class="active" {% endif %} >
+        <a href="/thea452.html">THEA 452 Blogs</a>
+      </li>
+      <li {% if page.title == 'THEA 452 Discussions' %} class="active" {% endif %} >
+        <a href="/discussions.html">THEA 452 Discussions</a>
+      </li>
+      <li {% if page.title == 'THEA 452 Reflections' %} class="active" {% endif %} >
+        <a href="/reflections.html">THEA 452 Reflections</a>
       </li>  
-      <li {% if page.title == 'Blogs' %} class="active" {% endif %} >
-        <a href="/blog.html">Blogs</a>
+      <li {% if page.title == 'Blog' %} class="active" {% endif %} >
+        <a href="/blog.html">Blog</a>
       </li>
       </li>
     </ul>
