--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -17,6 +17,10 @@
       <li {% if page.title == 'Resume' %} class="active" {% endif %} >
         <a href="/resume.html">Resume</a>        
       </li>
+      <li {% if page.title == 'THEA 452' %} class="active" {% endif %} >
+        <a href="/">THEA 452</a>
+      </li>
+      <ol>
       <li {% if page.title == 'THEA 452 Blogs' %} class="active" {% endif %} >
         <a href="/thea452.html">THEA 452 Blogs</a>
       </li>
@@ -28,6 +32,7 @@
       </li>  
       <li {% if page.title == 'Blog' %} class="active" {% endif %} >
         <a href="/blog.html">Blog</a>
+      </ol>  
       </li>
       </li>
     </ul>
