--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -17,22 +17,23 @@
       <li {% if page.title == 'Resume' %} class="active" {% endif %} >
         <a href="/resume.html">Resume</a>        
       </li>
-      <li {% if page.title == 'THEA 452' %} class="active" {% endif %} >
-        <a href="/">THEA 452</a>
-      </li>
-      <ul class="sub-menu">
-        <li {% if page.title == 'THEA 452 Blogs' %} class="active" {% endif %} >
-          <a href="/thea452.html">THEA 452 Blogs</a>
-        </li>
-        <li {% if page.title == 'THEA 452 Discussions' %} class="active" {% endif %} >
-          <a href="/discussions.html">THEA 452 Discussions</a>
-        </li>
-        <li {% if page.title == 'THEA 452 Reflections' %} class="active" {% endif %} >
-          <a href="/reflections.html">THEA 452 Reflections</a>
-        </li>  
-        <li {% if page.title == 'Blog' %} class="active" {% endif %} >
-          <a href="/blog.html">Blog</a>
-        </ul>  
+      
+      
+      <li>
+          <a href="#">THEA 452 <span class="arrow">$#9660</span></a>
+          <ul class="sub-menu">
+            <li {% if page.title == 'THEA 452 Blogs' %} class="active" {% endif %} >
+              <a href="/thea452.html">THEA 452 Blogs</a>
+            </li>
+            <li {% if page.title == 'THEA 452 Discussions' %} class="active" {% endif %} >
+              <a href="/discussions.html">THEA 452 Discussions</a>
+            </li>
+            <li {% if page.title == 'THEA 452 Reflections' %} class="active" {% endif %} >
+              <a href="/reflections.html">THEA 452 Reflections</a>
+            </li>  
+            <li {% if page.title == 'Blog' %} class="active" {% endif %} >
+              <a href="/blog.html">Blog</a>
+          </ul>  
       </li>
       </li>
     </ul>
