--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -20,7 +20,7 @@
       
       
       <li>
-          <a href="#">THEA 452 <span class="arrow">$#9660</span></a>
+          <a href="#">THEA 452 <span class="arrow">$#9660;</span></a>
           <ul class="sub-menu">
             <li {% if page.title == 'THEA 452 Blogs' %} class="active" {% endif %} >
               <a href="/thea452.html">THEA 452 Blogs</a>
