--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -1,6 +1,13 @@
-<div class="menu-wrap">
-  <nav class="menu">
-    <ul class="clearfix">
+<div class="navbar navbar-inverse">
+  <div class="navbar-header">
+    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-responsive-collapse">
+      <span class="icon-bar"></span>
+      <span class="icon-bar"></span>
+      <span class="icon-bar"></span>
+    </button>
+  </div>
+  <div class="navbar-collapse collapse navbar-responsive-collapse">
+    <ul class="nav navbar-nav">
       <li {% if page.title == 'Home' %} class="active" {% endif %} >
         <a href="/">Home</a>
       </li>
@@ -21,5 +28,5 @@
       </li>
       </li>
     </ul>
-  </nav>
+  </div>
 </div>
