--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -23,8 +23,9 @@
             <li><a href="/thea452.html">THEA 452 Blogs</a></li>
             <li><a href="/discussions.html">THEA 452 Discussions</a></li>
             <li><a href="/reflections.html">THEA 452 Reflections</a></li>
-            <li><a href="/blog.html">Blog</a></li>
-          </ul>  
+          </ul>
+      <li {% if page.title == 'Blog' %} class="active" {% endif %} >
+        <a href="/blog.html">Blog</a>
       </li>
       </li>
     </ul>
