--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -6,28 +6,35 @@
       <span class="icon-bar"></span>
     </button>
   </div>
-  <div class="navbar-collapse collapse navbar-responsive-collapse">
-    <ul class="nav navbar-nav">
-      <li {% if page.title == 'Home' %} class="active" {% endif %} >
-        <a href="/">Home</a>
-      </li>
-      <li {% if page.title == 'About' %} class="active" {% endif %} >
-        <a href="/about.html">About</a>
-      </li>
-      <li {% if page.title == 'Resume' %} class="active" {% endif %} >
-        <a href="/resume.html">Resume</a>        
-      </li>
-      <li>
-          <a href="#">THEA 452 <span class="arrow">&#9660;</span></a>
-          <ul class="sub-menu">
-            <li><a href="/thea452.html">THEA 452 Blogs</a></li>
-            <li><a href="/discussions.html">THEA 452 Discussions</a></li>
-            <li><a href="/reflections.html">THEA 452 Reflections</a></li>
+    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-2">
+      <ul class="nav navbar-nav">
+        <li {% if page.title == 'Home' %} class="active" {% endif %} >
+          <a href="/">Home</a>
+        </li>
+        <li {% if page.title == 'About' %} class="active" {% endif %} >
+          <a href="/about.html">About</a>
+        </li>
+        <li {% if page.title == 'Resume' %} class="active" {% endif %} >
+          <a href="/resume.html">Resume</a>        
+        </li>
+        <li><a href="#">THEA 452</a></li>
+        <li class="dropdown">
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Dropdown <span class="caret"></span></a>
+          <ul class="dropdown-menu" role="menu">
+            <li><a href="#">Blogs</a></li>
+            <li><a href="#">Discussions</a></li>
+            <li><a href="#">Reflections</a></li>
           </ul>
-      <li {% if page.title == 'Blog' %} class="active" {% endif %} >
-        <a href="/blog.html">Blog</a>
-      </li>
-      </li>
-    </ul>
+        </li>
+      </ul>
+      <form class="navbar-form navbar-left" role="search">
+        <div class="form-group">
+          <input type="text" class="form-control" placeholder="Search">
+        </div>
+        <button type="submit" class="btn btn-default">Submit</button>
+      </form>
+      <ul class="nav navbar-nav navbar-right">
+        <li><a href="/blog.html">Blog</a></li>
+      </ul>
   </div>
 </div>
