--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -17,13 +17,12 @@
         <li {% if page.title == 'Resume' %} class="active" {% endif %} >
           <a href="/resume.html">Resume</a>        
         </li>
-        <li><a href="#">THEA 452</a></li>
         <li class="dropdown">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Dropdown <span class="caret"></span></a>
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">THEA 452 <span class="caret"></span></a>
           <ul class="dropdown-menu" role="menu">
-            <li><a href="#">Blogs</a></li>
-            <li><a href="#">Discussions</a></li>
-            <li><a href="#">Reflections</a></li>
+            <li><a href="/thea452.html">Blogs</a></li>
+            <li><a href="/discussions.html">Discussions</a></li>
+            <li><a href="/reflections.html">Reflections</a></li>
           </ul>
         </li>
       </ul>
