--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -33,6 +33,7 @@
         <button type="submit" class="btn btn-default">Submit</button>
       </form>
       <ul class="nav navbar-nav navbar-right">
+        <li><a href="/contactme.html">Contact Me</a></li>
         <li><a href="/blog.html">Blog</a></li>
       </ul>
   </div>
