--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -25,7 +25,10 @@
             <li><a href="/reflections.html">Reflections</a></li>
           </ul>
         </li>
-      </ul>
+        <li {% if page.title == 'Videos' %} class="active" {% endif %} >
+          <a href="/videos.html">Videos</a>        
+        </li>
+       </ul>
       <form class="navbar-form navbar-left" role="search">
         <div class="form-group">
           <input type="text" class="form-control" placeholder="Search">
