--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -23,6 +23,7 @@
             <li><a href="/thea452.html">Blogs</a></li>
             <li><a href="/discussions.html">Discussions</a></li>
             <li><a href="/reflections.html">Reflections</a></li>
+            <li><a href="/thea452finalproject.html">Final Project</a></li>
           </ul>
         </li>
         <li {% if page.title == 'Videos' %} class="active" {% endif %} >
