--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -6,18 +6,18 @@
       <span class="icon-bar"></span>
     </button>
   </div>
-    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-2">
-      <ul class="nav navbar-nav">
-        <li {% if page.title == 'Home' %} class="active" {% endif %} >
-          <a href="/">Home</a>
-        </li>
-        <li {% if page.title == 'About' %} class="active" {% endif %} >
-          <a href="/about.html">About</a>
-        </li>
-        <li {% if page.title == 'Resume' %} class="active" {% endif %} >
+  <div class="navbar-collapse collapse navbar-responsive-collapse">
+    <ul class="nav navbar-nav">
+      <li {% if page.title == 'Home' %} class="active" {% endif %} >
+        <a href="/">Home</a>
+      </li>
+      <li {% if page.title == 'About' %} class="active" {% endif %} >
+        <a href="/about.html">About</a>
+      </li>
+      <li {% if page.title == 'Resume' %} class="active" {% endif %} >
           <a href="/resume.html">Resume</a>        
-        </li>
-        <li class="dropdown">
+      </li>
+    <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">THEA 452 <span class="caret"></span></a>
           <ul class="dropdown-menu" role="menu">
             <li><a href="/thea452.html">Blogs</a></li>
@@ -30,15 +30,8 @@
           <a href="/videos.html">Videos</a>        
         </li>
        </ul>
-      <form class="navbar-form navbar-left" role="search">
-        <div class="form-group">
-          <input type="text" class="form-control" placeholder="Search">
-        </div>
-        <button type="submit" class="btn btn-default">Submit</button>
-      </form>
       <ul class="nav navbar-nav navbar-right">
-        <li><a href="/contactme.html">Contact Me</a></li>
-        <li><a href="/blog.html">Blog</a></li>
+        <li {% if page.title == 'Contact Me' %} class="active" {% endif %}><a href="/contactme.html">Contact Me</a></li>
       </ul>
   </div>
 </div>
