--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,9 +1,21 @@
 <div class="page-header">
   <div class="panel panel-default jumbotron-header jumbotron">
     <div class="panel-body">
-     <img src="https://drive.google.com/uc?export=download&id=0B1dUInJge_OMdmQta0NaSnhmYlk" alt="logo" height="250" width="250" align="right" />
+        <img src="/images/headshot.jpg" alt="Michelle Plunkett" style="width:25%" align="right" />
       <h1><a href="/" style="text-decoration: none" color: black; >{{ site.title }}</a></h1>
 			<h3>Future Arts Administrator & Oboist</h3>
+            <h4>
+            <span style="margin-right:.2em"><a href="https://www.facebook.com/"><i class="fa fa-facebook-square solo fa-lg"></i></a></span>
+            <span style="margin-right:.2em"><a href="https://twitter.com/"><i class="fa fa-twitter-square solo fa-lg"></i></a></span>
+            </h4>
     </div>
   </div>
 </div>
+
+<!--
+<div class="alert alert-dismissable alert-warning">
+    <button type="button" class="close" data-dismiss="alert">×</button>
+    <h4>Pardon the dust</h4>
+    <p>Please pardon the dust, my website is still under construction.</p>
+</div>
+-->
