cannot use php email forms because github is not a full fledged hosting platform

--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -30,8 +30,8 @@
           <a href="/videos.html">Videos</a>        
         </li>
        </ul>
-      <ul class="nav navbar-nav navbar-right">
+      <!--<ul class="nav navbar-nav navbar-right">
         <li {% if page.title == 'Contact Me' %} class="active" {% endif %}><a href="/contactme.html">Contact Me</a></li>
-      </ul>
+      </ul> -->
   </div>
 </div>
