--- a/_includes/header.html
+++ b/_includes/header.html
@@ -8,7 +8,7 @@
             <span style="margin-right:.2em"><a href="https://www.facebook.com/michellejane"><i class="fa fa-facebook-square solo fa-lg"></i></a></span>
             <span style="margin-right:.2em"><a href="https://twitter.com/michelleisatwin"><i class="fa fa-twitter-square solo fa-lg"></i></a></span>
             <span style="margin-right":.2em><a href="https://www.linkedin.com/in/michellejane"><i class="fa fa-linkedin-square solo fa-lg"></i></a></span>
-            <span style="margin-right":.2em><a href=mailto:michellejplunkett@gmail.com><i class="octicon octicon-mail"></i></a></span>
+            <span style="margin-right":.2em><a href=mailto:michellejplunkett@gmail.com><i class="fa fa-envelope-square solo fa-lg"></i></a></span>
             </h4>
     </div>
   </div>
