--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -17,6 +17,9 @@
       <li {% if page.title == 'Resume' %} class="active" {% endif %} >
           <a href="/resume.html">Resume</a>        
       </li>
+      <li {% if page.title == 'Blog' %} class="active" {% endif %} >
+          <a href="/blog.html">Blog</a>        
+      </li>
     <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">THEA 452 <span class="caret"></span></a>
           <ul class="dropdown-menu" role="menu">
