--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -26,10 +26,13 @@
             <li><a href="/thea452finalproject.html">Final Project</a></li>
           </ul>
         </li>
-        <li {% if page.title == 'Videos' %} class="active" {% endif %} >
+      <li {% if page.title == 'Projects' %} class="active" {% endif %} >
+          <a href="/projects.html">Projects</a>        
+      </li>
+      <li {% if page.title == 'Videos' %} class="active" {% endif %} >
           <a href="/videos.html">Videos</a>        
-        </li>
-       </ul>
+      </li>
+      </ul>
       <!--<ul class="nav navbar-nav navbar-right">
         <li {% if page.title == 'Contact Me' %} class="active" {% endif %}><a href="/contactme.html">Contact Me</a></li>
       </ul> -->
