--- a/_includes/header.html
+++ b/_includes/header.html
@@ -3,12 +3,12 @@
     <div class="panel-body">
         <img src="/images/headshot.jpg" alt="Michelle Plunkett" style="width:25%" align="right" />
       <h1><a href="/" style="text-decoration: none" color: black; >{{ site.title }}</a></h1>
-			<h3>Future Arts Administrator & Oboist</h3>
+			<h3>Graduate Student in Public Affairs at UT Austin & Oboist</h3>
             <h4>
             <span style="margin-right:.2em"><a href="https://www.facebook.com/michellejane"><i class="fa fa-facebook-square solo fa-lg"></i></a></span>
             <span style="margin-right:.2em"><a href="https://twitter.com/michelleisatwin"><i class="fa fa-twitter-square solo fa-lg"></i></a></span>
             <span style="margin-right:.2em"><a href="https://www.linkedin.com/in/michellejane"><i class="fa fa-linkedin-square solo fa-lg"></i></a></span>
-            <span style="margin-right:.2em"><a href=mailto:michellejplunkett@gmail.com><i class="fa fa-envelope-square solo fa-lg"></i></a></span>
+            <span style="margin-right:.2em"><a href=mailto:michellep1994@gmail.com><i class="fa fa-envelope-square solo fa-lg"></i></a></span>
             </h4>
     </div>
   </div>
