--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -33,6 +33,9 @@
             <li><a href="/compositions.html">Compositions</a></li>
           </ul>
       </li>
+      <li {% if page.title == 'Writing Samples' %} class="active" {% endif %} >
+          <a href="/writing.html">Writing Samples</a>        
+      </li>
       <li {% if page.title == 'Videos' %} class="active" {% endif %} >
           <a href="/videos.html">Videos</a>        
       </li>
