--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -34,9 +34,9 @@
           </ul>
       </li>
       <li class="dropdown">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false"> UI Writing Samples <span class="caret"></span></a>
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Writing Samples <span class="caret"></span></a>
           <ul class="dropdown-menu" role="menu">
-            <li><a href="/writing/_posts/2016-06-16-INFO202Final.html">INFO 202 Final</a></li>
+            <li><a href="/writing.html">Writingl</a></li>
           </ul>
       </li>
       <li {% if page.title == 'Videos' %} class="active" {% endif %} >
