--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -33,8 +33,11 @@
             <li><a href="/compositions.html">Compositions</a></li>
           </ul>
       </li>
-      <li {% if page.title == 'Writing Samples' %} class="active" {% endif %} >
-          <a href="/writing.html">Writing Samples</a>        
+      <li class="dropdown">
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Writing Samples <span class="caret"></span></a>
+          <ul class="dropdown-menu" role="menu">
+            <li><a href="/writing/_posts/2016-06-16-INFO202Final.html">INFO 202 Final</a></li>
+          </ul>
       </li>
       <li {% if page.title == 'Videos' %} class="active" {% endif %} >
           <a href="/videos.html">Videos</a>        
