--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -36,9 +36,13 @@
       <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Writing Samples <span class="caret"></span></a>
           <ul class="dropdown-menu" role="menu">
-            <li><a href="/writing.html">INFO 202 Final</a></li>
+            <li><a href="/writing.html">INFO 202 Final Paper</a></li>
                 <ul class="dropdown-menu">
-                    <li><a href="/2016-06-16-INFO202Final.html">INFO 202 Final</a></li>
+                    <li><a href="/2016-06-16-INFO202Final.html"></a></li>
+                </ul>
+            <li><a href="/writing.html">INFO 202 Article Review</a></li>
+                <ul class="dropdown-menu">
+                    <li><a href="/2016-06-16-INFO202ArticleReview.html"></a></li>
                 </ul>
           </ul>
       </li>
