--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -38,11 +38,11 @@
           <ul class="dropdown-menu" role="menu">
             <li><a href="/writing.html">INFO 202 Final Paper</a></li>
                 <ul class="dropdown-menu">
-                    <li><a href="/2016-06-16-INFO202Final.html"></a></li>
+                    <li><a href="/2016-06-16-INFO202Final.html">INFO 202 Final Paper</a></li>
                 </ul>
             <li><a href="/writing.html">INFO 202 Article Review</a></li>
                 <ul class="dropdown-menu">
-                    <li><a href="/2016-06-16-INFO202ArticleReview.html"></a></li>
+                    <li><a href="/2016-06-16-INFO202ArticleReview.html">INFO 202 Article Review</a></li>
                 </ul>
           </ul>
       </li>
