--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -38,6 +38,7 @@
           <ul class="dropdown-menu" role="menu">
             <li><a href={% post_url /writing/2016-06-16-INFO202Final %}>INFO 202 Final Paper</a></li>
             <li><a href={% post_url /writing/2016-06-16-INFO202ArticleReview %}>INFO 202 Article Review</a></li>
+            <li><a href={% post_url /writing/2016-12-15-MUS400Final %}>MUS 400 Final Paper</a></li>
           </ul>
       </li>
       <li {% if page.title == 'Videos' %} class="active" {% endif %} >
