--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -29,11 +29,11 @@
       <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Projects <span class="caret"></span></a>
           <ul class="dropdown-menu" role="menu">
-            <li><a href="">Projects</a></li>
-                <ul class="dropdown-submenu">
-                <a tabindex="-1" href="#">Projects</a>
-                    <li><a href={% post_url /projects/2015-11-24-CS105-Scratch %}>CS 105 Scratch Project</a></li>
-                    <li><a href={% post_url /projects/2015-11-17-THEA453Design %}>THEA 453 Sound Design</a></li>
+            <li class="dropdown-submenu">
+            <a tabindex="-1" href="/">Projects</a>
+                <ul class="dropdown-menu">
+                  <li><a tabindex="-1" href={% post_url /projects/2015-11-24-CS105-Scratch %}>CS 105 Scratch Project</a></li>
+                  <li><a tabindex="-1" href={% post_url /projects/2015-11-17-THEA453Design %}>THEA 453 Sound Design</a></li>
                 </ul>
             <li><a href="/compositions.html">Compositions</a></li>
           </ul>
