--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -30,11 +30,12 @@
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Projects <span class="caret"></span></a>
           <ul class="dropdown-menu" role="menu">
             <li class="dropdown-submenu">
-            <a tabindex="-1" href="/">Projects</a>
+                <a tabindex="-1" href="#">All Projects</a>
                 <ul class="dropdown-menu">
                   <li><a tabindex="-1" href={% post_url /projects/2015-11-24-CS105-Scratch %}>CS 105 Scratch Project</a></li>
                   <li><a tabindex="-1" href={% post_url /projects/2015-11-17-THEA453Design %}>THEA 453 Sound Design</a></li>
                 </ul>
+            </li>
             <li><a href="/compositions.html">Compositions</a></li>
           </ul>
       </li>
