--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -26,31 +26,30 @@
             <li><a href="/thea452finalproject.html">Final Project</a></li>
           </ul>
         </li>
-      <li class="dropdown">
+    <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Projects <span class="caret"></span></a>
           <ul class="dropdown-menu" role="menu">
-            <li class="dropdown-submenu">
-                <a tabindex="-1" href="#">All Projects</a>
+            <li><a href="/compositions.html">Compositions</a></li>
+            <li class="dropdown-submenu">All Projects 
                 <ul class="dropdown-menu">
                   <li><a tabindex="-1" href={% post_url /projects/2015-11-24-CS105-Scratch %}>CS 105 Scratch Project</a></li>
                   <li><a tabindex="-1" href={% post_url /projects/2015-11-17-THEA453Design %}>THEA 453 Sound Design</a></li>
                 </ul>
             </li>
-            <li><a href="/compositions.html">Compositions</a></li>
           </ul>
-      </li>
-      <li class="dropdown">
+    </li>
+    <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Writing Samples <span class="caret"></span></a>
           <ul class="dropdown-submenu" role="menu">
             <li><a href={% post_url /writing/2016-06-16-INFO202Final %}>INFO 202 Final Paper</a></li>
             <li><a href={% post_url /writing/2016-06-16-INFO202ArticleReview %}>INFO 202 Article Review</a></li>
             <li><a href={% post_url /writing/2015-12-15-MUS400Final %}>MUS 400 Final Paper</a></li>
           </ul>
-      </li>
-      <li {% if page.title == 'Videos' %} class="active" {% endif %} >
+    </li>
+    <li {% if page.title == 'Videos' %} class="active" {% endif %} >
           <a href="/videos.html">Videos</a>        
-      </li>
-      </ul>
+    </li>
+    </ul>
       <!--<ul class="nav navbar-nav navbar-right">
         <li {% if page.title == 'Contact Me' %} class="active" {% endif %}><a href="/contactme.html">Contact Me</a></li>
       </ul> -->
