--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -18,8 +18,7 @@
           <a href="/resume.html">Resume</a>        
       </li>
     <li class="dropdown">
-          <a id="dLabel" role="button" data-toggle="dropdown" class="btn btn-primary" data-target="#" href="/page.html">Projects <span class="caret"></span></a>
-          <!--><a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">THEA 452 <span class="caret"></span></a></!-->
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">THEA 452 <span class="caret"></span></a>
           <ul class="dropdown-menu" role="menu">
             <li><a href="/thea452.html">Blogs</a></li>
             <li><a href="/discussions.html">Discussions</a></li>
@@ -28,7 +27,9 @@
           </ul>
         </li>
     <li class="dropdown">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false" data-target="#">Projects <span class="caret"></span></a>
+          <a id="dLabel" role="button" data-toggle="dropdown" class="btn btn-primary" data-target="#" href="/page.html">Projects <span class="caret"></span>
+          <!--><a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false" data-target="#">Projects <span class="caret"></span></a>
+          </!-->
           <ul class="dropdown-menu" role="menu">
             <li><a href="/compositions.html">Compositions</a></li>
             <li class="dropdown-submenu" role="menu">
