--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -40,7 +40,7 @@
             <li><a href={% post_url /writing/2016-06-16-INFO202Final %}>INFO 202 Final Paper</a></li>
             <li><a href={% post_url /writing/2016-06-16-INFO202ArticleReview %}>INFO 202 Article Review</a></li>
             <li><a href={% post_url /writing/2015-12-15-MUS400Final %}>MUS 400 Final Paper</a></li>
-            <li><a href={% post_url /writing/2015-05-11-BTW263CaseStudy %}>BTW 263 Case Study</li>
+            <li><a href={% post_url /writing/2015-05-11-BTW263CaseStudy %}>BTW 263 Case Study</a></li>
           </ul>
     </li>
     <li {% if page.title == 'Videos' %} class="active" {% endif %} >
