--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -4,9 +4,9 @@ layout: default
 <div class="post">
 	<div class="panel panel-default">
 		<div class="panel-body">
-  <!--><header class="post-header">
+  <!--<header class="post-header">
     <h2 class="post-title">{{ page.title }}</h2>
-    <!--<p class="post-meta">{{ page.date | date: "%b %-d, %Y" }}{% if page.author %} • {{ page.author }}{% endif %}{% if page.meta %} • {{ page.meta }}{% endif %}</p>
+   	<p class="post-meta">{{ page.date | date: "%b %-d, %Y" }}{% if page.author %} • {{ page.author }}{% endif %}{% if page.meta %} • {{ page.meta }}{% endif %}</p>
   </header>-->
 
   <article class="post-content">
