--- a/_layouts/about.html
+++ b/_layouts/about.html
@@ -3,7 +3,7 @@ layout: default
 ---
 
   <div class="col">
-    {% for post in site.categories.posts %}
+    {% for post in site.categories.about %}
     <article class="box" id="{{ post.title }}">
 			<div class="panel panel-default">
 					<div class="panel-body">
