--- a/_layouts/about.html
+++ b/_layouts/about.html
@@ -12,5 +12,6 @@ layout: default
 					</div>
 			</div>
     </article>
+    {% include post.html item=post markdown=true %}
     {% endfor %} 
   </div>
