--- a/_layouts/about.html
+++ b/_layouts/about.html
@@ -8,7 +8,7 @@ layout: default
     <article class="box" id="{{ post.title }}">
 			<div class="panel panel-default">
 					<div class="panel-body">
-						  {{ post.content }}
+						  {{ content }}
 					</div>
 			</div>
     </article>
