--- a/_layouts/about.html
+++ b/_layouts/about.html
@@ -1,15 +1,12 @@
 ---
 layout: default
----  
-
-  <div class="col">
-    {% for post in site.categories.about %}
-    <article class="box" id="{{ post.title }}">
-			<div class="panel panel-default">
-					<div class="panel-body">
-						  {{ content }}
-					</div>
-			</div>
-    </article>
-    {% endfor %} 
-  </div>
+---
+<div class="post">
+	<div class="panel panel-default">
+		<div class="panel-body">
+  <article class="post-content">
+    {{ content }}
+  </article>
+		</div>
+	</div>
+</div>
