--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -12,7 +12,7 @@
         <a href="/">Home</a>
       </li>
       <li {% if page.title == 'About' %} class="active" {% endif %} >
-        <a href="/about.html">About</a>
+        <a href="{% post_url /about/2016-06-16.about %}">About</a>
       </li>
       <li {% if page.title == 'Resume' %} class="active" {% endif %} >
           <a href="/resume.html">Resume</a>        
