--- a/_layouts/about.html
+++ b/_layouts/about.html
@@ -1,6 +1,7 @@
 ---
 layout: default
 ---
+<!--
 <div class="post">
 	<div class="panel panel-default">
 		<div class="panel-body">
@@ -14,4 +15,13 @@ layout: default
   </article>
 		</div>
 	</div>
+</div>
+-->
+
+<div class="listing">
+    <article> 
+        <div class="entry-content">
+            {{ content }}
+        </div>
+    </article>
 </div>
