--- a/_includes/header.html
+++ b/_includes/header.html
@@ -8,6 +8,8 @@
         <!-- {{ site.title }} instead of blog -->
         <a class="page-link" href="{{ site.baseurl }}/">home</a>
 
+        <a href="http://blog.michelle-plunkett.com">blog</a>
+
         {% for page in site.pages %}
           {% if page.title %}
           <a class="page-link" href="{{ page.url | prepend: site.baseurl }}">{{ page.title }}</a>
