--- a/_layouts/about.html
+++ b/_layouts/about.html
@@ -9,7 +9,8 @@
 
   <header class="post-header">
     <h1 class="post-title">{{ page.title }}</h1>
-    <h5 class="post-description">{{ page.description }}</h5>
+    <p class="post-meta">{{ page.description }}</p>
+    <p class="post-meta">{{ page.date | date: "%B %-d, %Y" }}{% if page.author %} • {{ page.author }}{% endif %}{% if page.meta %} • {{ page.meta }}{% endif %}</p>
   </header>
 
     <div class="page-content">
