--- a/_layouts/about.html
+++ b/_layouts/about.html
@@ -7,10 +7,10 @@
 
     {% include header.html %}
 
-  <header class="post-header">
-    <h1 class="post-title">{{ page.title }}</h1>
-    <p class="post-meta">{{ page.description }}</p>
-    <p class="post-meta">{{ page.date | date: "%B %-d, %Y" }}{% if page.author %} • {{ page.author }}{% endif %}{% if page.meta %} • {{ page.meta }}{% endif %}</p>
+  <header class="page-header">
+    <h1 class="page-title">{{ page.title }}</h1>
+    <p class="page-meta">{{ page.description }}</p>
+    <p class="page-meta">{{ page.date | date: "%B %-d, %Y" }}{% if page.author %} • {{ page.author }}{% endif %}{% if page.meta %} • {{ page.meta }}{% endif %}</p>
   </header>
 
     <div class="page-content">
