--- a/_layouts/about.html
+++ b/_layouts/about.html
@@ -8,10 +8,8 @@ layout: default
         <h5 class="post-description">{{ page.description }}</h5>
     </header>
 
-    <div class="page-content">
-      <div class="wrapper">
+    <div class="post-content">
         {{ content }}
-      </div>
     </div>
 
 </div>
