--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,8 +1,12 @@
 <footer class="site-footer">
     
     <div class="wrapper">
-    <p align="right">© Michelle Plunkett 2016</p>
+        <p align="right">© Michelle Plunkett <span id="year"></span></p>
     </div>
+    
+  <script>
+  document.getElementById("year").innerHTML = new Date().getFullYear();
+  </script>
 <!--
   <div class="wrapper">
   	<p>This site was built using <a href="http://jekyllrb.com" target="_blank">Jekyll</a> and is hosted on <a href="https://github.com" target="_blank">Github</a> Photos from <a href="https://unsplash.com" target="_blank">Unsplash</a> and text generated with <a href="http://hipsum.co" target="_blank">Hipster Ipsum</a>. &#169; 2015</p>
