--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -24,6 +24,11 @@ text-decoration: none;
 color: $theme-color;
     }
 }
+
+.site-nav a{
+    color: white;
+}
+
 .site-nav {
 float: right;
 line-height: $nav-height;
