--- a/_includes/header.html
+++ b/_includes/header.html
@@ -9,7 +9,7 @@
         <a class="page-link" href="{{ site.baseurl }}/">home</a>
 
 
-        <a class="page-link" href="http://blog.michelle-plunkett.com">blog</a>
+  <!--      <a class="page-link" href="http://blog.michelle-plunkett.com">blog</a> -->
 
         {% for page in site.pages %}
           {% if page.title %}
